@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: May 1, 2010</p>
+      <p>Last Updated: May 2, 2010</p>
     </td>
   </tr>
 </table>
@@ -1686,6 +1686,10 @@ nuttx-5.5 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* configs/olimex-str7p11/nettest - examples/nettest configuration using
 	  the ENC28J60 driver on the Olimex STMicro STR-P711.
 	  (unverified on original check-in)
+	* configs/olimex-str7p11/src/up_enc28j60.c - Add ENC28J60 initialization
+	  logic.
+	* arch/arm/src/str7x/str7x_xti.c - Add basic XTI support (external
+	  interrupts).
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
