@@ -118,7 +118,7 @@ CONFIG_STR71X_CAN=n
 CONFIG_STR71X_BSPI0=y
 CONFIG_STR71X_BSPI1=n
 CONFIG_STR71X_HDLC=n
-CONFIG_STR71X_XTI=n
+CONFIG_STR71X_XTI=y
 CONFIG_STR71X_GPIO0=y
 CONFIG_STR71X_GPIO1=y
 CONFIG_STR71X_GPIO2=n
